--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/index.css">
+    <title>Mouse Events</title>
 </head>
 <body>
+    
+    <!-- <button onblur="myFunc()" ondblclick="console.log('dblclick')""> Click me</button>
+    <! <script> 
+        function myFunc(){
+            console.log('CLICK')
+        }
+    </script> --> 
+
+   <!-- <button onclick="click">Btn</button> -->
+   <input type="text" class="input">
     <script src="./index.js"></script>
 </body>
 </html>
